# kernel-dsl

./: .gitignore  .gitmodules  AGENTS.md  README.md  main.py  pyproject.toml
.agents/skills/: cuda-kernel-wiki  cuda-ncu-profiler  kernel-creator  tilelang-torch-profiler  tilelang-wiki
skills/cuda-kernel-wiki/: README.md  SKILL.md  index.md
skills/cuda-kernel-wiki/candidates/: README.md
skills/cuda-kernel-wiki/references/: examples.md  primer.md  schema.md
skills/cuda-ncu-profiler/: SKILL.md  blackwell-cuda-programming.md
skills/cuda-ncu-profiler/helpers/: README.md  analyze_reports.py  extract_stall_hotspots.py  kernel_name_regex.py  list_flashinfer_workloads.py  ncu_utils.py  plot_timeline.py  profile_template.py
skills/cuda-ncu-profiler/reference/: 00-directory-layout.md  01-workflow.md  02-harness-guide.md  03-collection.md  04-python-api.md  07-report-template.md  09-common-issues.md
skills/tilelang-wiki/: FAQs.md  SKILL.md
skills/tilelang-wiki/examples/: README.md
skills/tilelang-wiki/references/: README.md
trials/tilelang/01-vector-add/: profile_vector_add_kernel.py  test_vector_add_kernel.py  vector_add_kernel.py
trials/tilelang/02-fused-softmax/: fused_softmax_kernel.py  profile_fused_softmax_kernel.py  test_fused_softmax_kernel.py
trials/tilelang/03-fused-gemm-relu/: README.md  fused_gemm_relu_kernel.py  profile_fused_gemm_relu_kernel.py  test_fused_gemm_relu_kernel.py
trials/tilelang/04-layer-rms-norm/: README.md  layer_rms_norm_kernel.py  profile_layer_rms_norm_kernel.py  test_layer_rms_norm_kernel.py
(+46 files in other folders)
