[project]
name = "kernel-dsl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "fla-core>=0.5.0",
    "matplotlib>=3.10.9",
    "packaging>=26.2",
    "tilelang>=0.1.10",
    "torch>=2.12.0",
    "triton>=3.7.0",
]
